contracts/src/snapshots/stellar_stream__test__clawback_executed_event.snap
---
source: src/test.rs
expression: event_data
---
ClawbackExecuted {
    stream_id: 1,
    actor: Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M),
    timestamp: 500,
    amount: 250,
    recipient: Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M),
}
