contracts/src/snapshots/stellar_stream__test__pause_resume_snapshot_lifecycle-3.snap
---
source: src/test.rs
assertion_line: 1789
expression: post_claim_stream
---
Stream {
    sender: Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M),
    recipient: Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAITA4),
    token: Contract(CDLDVFKHEZ2RVB3NG4UQA4VPD3TSHV6XMHXMHP2BSGCJ2IIWVTOHGDSG),
    total_amount: 1000,
    claimed_amount: 750,
    start_time: 1100,
    end_time: 2100,
    cliff_seconds: 0,
    vesting_type: String(linear),
    min_claim_interval_seconds: 0,
    last_claim_time: 1850,
    canceled: false,
    paused: false,
    pause_started_at: None,
    metadata: None,
    require_mutual_cancel: false,
}
