contracts/src/snapshots/stellar_stream__test__pause_resume_snapshot_lifecycle.snap
---
source: src/test.rs
assertion_line: 1767
expression: paused_stream
---
Stream {
    sender: Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M),
    recipient: Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAITA4),
    token: Contract(CDLDVFKHEZ2RVB3NG4UQA4VPD3TSHV6XMHXMHP2BSGCJ2IIWVTOHGDSG),
    total_amount: 1000,
    claimed_amount: 0,
    start_time: 1000,
    end_time: 2000,
    cliff_seconds: 0,
    vesting_type: String(linear),
    min_claim_interval_seconds: 0,
    last_claim_time: 0,
    canceled: false,
    paused: true,
    pause_started_at: Some(
        1500,
    ),
    metadata: None,
    require_mutual_cancel: false,
}
