contracts/src/snapshots/stellar_stream__test__stream_cancel_after_partial_claim.snap
---
source: src/test.rs
assertion_line: 498
expression: stream
---
Stream {
    sender: Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M),
    recipient: Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAITA4),
    token: Contract(CDLDVFKHEZ2RVB3NG4UQA4VPD3TSHV6XMHXMHP2BSGCJ2IIWVTOHGDSG),
    total_amount: 700,
    claimed_amount: 300,
    start_time: 0,
    end_time: 700,
    cliff_seconds: 0,
    vesting_type: String(linear),
    min_claim_interval_seconds: 0,
    last_claim_time: 500,
    canceled: true,
    paused: false,
    pause_started_at: None,
    metadata: None,
    require_mutual_cancel: false,
}
