contracts/src/snapshots/stellar_stream__test__stream_created_event.snap
---
source: src/test.rs
assertion_line: 713
expression: event
---
StreamCreated {
    stream_id: 1,
    actor: Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD2KM),
    timestamp: 100,
    sender: Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD2KM),
    recipient: Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFCT4),
    token: Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M),
    token_symbol: String(TEST),
    total_amount: 1000,
    start_time: 100,
    end_time: 200,
    cliff_seconds: 0,
    vesting_type: String(linear),
    min_claim_interval_seconds: 0,
    metadata: None,
}
