contracts/src/snapshots/stellar_stream__test__stream_created_with_metadata.snap
---
source: src/test.rs
assertion_line: 1999
expression: event_data
---
StreamCreated {
    stream_id: 1,
    actor: Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M),
    timestamp: 0,
    sender: Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHK3M),
    recipient: Contract(CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAITA4),
    token: Contract(CDLDVFKHEZ2RVB3NG4UQA4VPD3TSHV6XMHXMHP2BSGCJ2IIWVTOHGDSG),
    token_symbol: String(aaa),
    total_amount: 1000,
    start_time: 0,
    end_time: 1000,
    cliff_seconds: 0,
    vesting_type: String(linear),
    min_claim_interval_seconds: 0,
    metadata: Some(
        Map(Ok((String(department), String(engineering)))),
    ),
}
